# ssqlite

./: .gitignore  .gitmodules  DOCKER_BUILD.md  README.md  build_sqlite_python.md  lambda-efs.json  python-3.6.1.diff  setup.py  sfs-dev-setup.md  sfs-dev.json
docker-dev/: Dockerfile
examples/image-preprocess/: Pipfile  README.md  deploy.sh  deploy_env  handler.py  lambdadeploy.sh  logging_test.py  main.py  process.py  sfs  tester.py  the_env
examples/lambda_mnist_ml_demo/: README.md  download_python_packages.sh  main.py  mnist_svm.py
examples/lambda_mnist_ml_demo/lambda_utils/: lambda_function.py
examples/lambda_mnist_ml_demo/lambda_utils/sfs/: __init__.py  sfs.py
nfsv4/: .gitignore  Makefile  README  README.md  buffer.h  client.c  codepoint.h  config.h  format.c  freelist.h  heap.c  nfs4.c  nfs4.h  nfs4_codepoints.c  nfs4_internal.h  nfs4xdr.h  rpc.c  runtime.h  session.c  shell.c  status.h  ticks.h  transfer.c  vector.h  xdr.c  xdr.h  xdrattr.c
nfsv4/test/: Makefile  README.md  gk.c  md5.c  md5.h  shell.c  svg.c  svg.h
py-tpcc/pytpcc/: README-SSQLite.md  initializaion-config  initialization-config  paramsweep.py
py-tpcc/pytpcc/drivers/: sqlitedriver.py
py-tpcc/pytpcc/runtime/: executor.py
py-tpcc/pytpcc/util/: results.py
pytpcc/: formatresults.py  paramsweep.py  tpcc.py
pytpcc/util/: rand.py
pyvfsbench/: build.sh  setup.py  vfsbench.c
sfs/: __init__.py  sfs.py
sqllite_nfs4/: sqllite_nfs4.c
tcbl/: CMakeLists.txt
tcbl/src/: CMakeLists.txt  cachedvfs.c  cachedvfs.h  ll_log.c  ll_log.h  perfstats.c  perfstats.h  runtime.h  tcbl.c  tcbl_vfs.c  tcbl_vfs.h  vfs.h
tcbl/test/: CMakeLists.txt  change_fh.c  change_fh.h  memvfs.c  memvfs.h  nfsvfs.c  nfsvfs.h  sqlitetcbl.c  test_cache.c  test_ll_log.c  test_runtime.h  test_tcbl.c  test_tcbl.h  test_util.c  unixvfs.c  unixvfs.h  vfs_comparison.c  vfs_comparison.h  vfslog.c
test/: .gitignore  Makefile  README.md  analyze_vfsbench.py  basic_ops_bench  basic_ops_bench.c  benchmark.py  binary_read_test.py  build_demo.sh  demo_py.py  hello  hello.c  item_sample.sql  lambda-grep.py  nfsoptest.c  nfsv4_read_demo.c  nfsv4_read_write_test  nfsv4_read_write_test.c  nfsv4_write_demo.c  page_size_64k.sql  perf_log.json  pysfs.c  python_simply_demo.py  q1.sql  q2.sql  q3.sql  read_dir_test.c  sfs.py  sfs_test.py  simpletest.c  simpletest_c.c  stock_sample.sql  sweep_vfsbench.py  testmemvfs.c  testnfsvfs.c  vfsbench.c  wal_mode.sql  warehouse.sql  write_tests.sh
test/image-preprocess/: Pipfile  handler.py  main.py  process.py
tools/: ext_download.sh  invoke.py  lambdadeploy.sh  tpcc_lambda.py  tpcc_lambda_rates.py
